# Particle-Life

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.sh  log.txt
.blackboxcli/: PROJECT_SUMMARY.md  settings.json
.github/workflows/: ci.yml
shaders/: compute.comp  fullscreen.frag  fullscreen.vert
src/: compute_pipeline.cpp  compute_pipeline.h  interface.cpp  interface.h  interface_new.cpp  organism.cpp  organism.h  particles.cpp  particles.h  renderer.cpp  renderer.h  serialization.h  simulation.cpp  simulation.h  types.h  vulkan_context.cpp  vulkan_context.h
src/core/: main.cpp  types.h
src/gpu/: compute_pipeline.cpp  compute_pipeline.h  renderer.cpp  renderer.h  vulkan_context.cpp  vulkan_context.h
src/sim/: organism.cpp  organism.h  particles.cpp  particles.h  simulation.cpp  simulation.h
src/ui/: interface.cpp  interface.h
tests/: main.cpp  test_behavior_flags.cpp  test_clustering.cpp  test_config.cpp  test_energy.cpp  test_force_matrix.cpp  test_framework.hpp  test_genome.cpp  test_organism_id.cpp  test_particles.cpp  test_rng.cpp  test_speciation.cpp  test_suite  test_suite_bin  test_terrain.cpp  update_readme.py
tests/results/: latest.json  latest.txt
